<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="@color/primary"
        android:padding="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivProfile"
            android:layout_width="@dimen/_75dp"
            android:layout_height="@dimen/_75dp"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:layout_marginTop="@dimen/_10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_pic_default_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:shapeAppearanceOverlay="@style/circleImageView" />

        <ProgressBar
            android:id="@+id/loader"
            android:layout_width="43dp"
            android:layout_height="44dp"
            android:layout_marginHorizontal="@dimen/_35dp"
            android:layout_marginTop="@dimen/_25dp"
            android:elevation="@dimen/_5dp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:layout_marginTop="@dimen/_10dp"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/userName"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivProfile" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:layout_marginTop="@dimen/_10dp"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvName" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>