<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.app.myapp.ui.register.RegisterViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.editProfile.EditProfileActivity">

            <include
                android:id="@+id/toolBarLogin"
                layout="@layout/header" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/titleLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20dp"
                android:fontFamily="@font/rubik_regular"
                android:text="@string/register"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:textSize="@dimen/_25dp"
                app:layout_constraintBottom_toBottomOf="@id/toolBarLogin"
                app:layout_constraintEnd_toEndOf="@id/toolBarLogin"
                app:layout_constraintStart_toStartOf="@id/toolBarLogin"
                app:layout_constraintTop_toTopOf="@id/toolBarLogin" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageProfileLogin"
                android:layout_width="@dimen/_100dp"
                android:layout_height="@dimen/_100dp"
                android:layout_marginTop="@dimen/_60dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolBarLogin"
                app:shapeAppearanceOverlay="@style/circleImageView" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvUpload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20dp"
                android:fontFamily="@font/rubik_regular"
                android:text="@string/select_image"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:textSize="@dimen/_16sp"
                app:layout_constraintTop_toBottomOf="@+id/imageProfileLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUserNameRegister"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_40dp"
                android:layout_marginTop="@dimen/_60dp"
                android:layout_marginEnd="@dimen/_40dp"
                android:hint="@string/userName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageProfileLogin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:text="@={viewmodel.userName}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmailRegister"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_40dp"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_40dp"
                android:hint="@string/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilUserNameRegister">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmailRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:text="@={viewmodel.email}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassRegister"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:hint="@string/password"
                app:layout_constraintEnd_toEndOf="@+id/tilEmailRegister"
                app:layout_constraintStart_toStartOf="@+id/tilEmailRegister"
                app:layout_constraintTop_toBottomOf="@+id/tilEmailRegister">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:text="@={viewmodel.password}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_marginBottom="@dimen/_20dp"
                android:fontFamily="@font/rubik_regular"
                android:padding="@dimen/_10dp"
                android:text="@string/register"
                android:textSize="@dimen/_16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/tilPassRegister"
                app:layout_constraintStart_toStartOf="@id/tilPassRegister"
                app:layout_constraintTop_toBottomOf="@+id/tilPassRegister"
                app:layout_constraintVertical_bias="0.20"
                app:textAllCaps="false" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvGoToLogin"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20dp"
                android:fontFamily="@font/rubik_regular"
                android:gravity="center"
                android:text="@string/click_here_to_login"
                android:textColor="@color/primary"
                android:textSize="@dimen/_18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
